# olfactory-visualizer

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SETUP.md  capstone_backup.sql  docker-compose.yml  murthy_db.dump  package.json  pyproject.toml  requirements.txt
code/: config.py
code/api/: auth.py  dependencies.py  deps.py  duplication.py  main.py  models.py  routes_data.py  routes_microscopy.py  routes_region_counts.py  routes_uploads.py  scrna.py  settings.py  utils.py
code/api/routes/: __init__.py  data.py  metrics.py  microscopy.py  region_counts.py  scrna.py
code/api/services/: uploads.py
code/common/: hashing.py
code/database/: connect.py  deduplication.py  diagnose_db.py  etl.py  ingest_upload.py  init_db.py  schema.sql
code/database/etl/: __init__.py  atlas.py  bids.py  convert_to_zarr.py  counts.py  counts_helper.py  paths.py  runner.py  stats.py  subject_map.py  subjects.py  utils.py
code/src/conversion/: convert_to_zarr.py  subject_map.py
code/web/: datasets.js  double_injection.html  dual_injection.js  index.html  main.js  napari.html  rabies.html  rabies.js  scrna.html  styles.css  upload.html  upload.js  utils.js
code/web-react/: README.md  index.html  package-lock.json  package.json  vite.config.ts
code/web-react/public/: region_ratings.json
code/web-react/src/: App.tsx
code/web-react/src/api/: client.ts  endpoints.ts  index.ts
code/web-react/src/components/: index.ts
scripts/: check-unused-css.js  check_data.py  get_viewer.py  view_zarr.py
tests/: test_etl_bids.py  test_etl_smoke.py  test_etl_utils.py
(+43 files in other folders)
