[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone"
version = "0.1.0"
description = "Olfactory data visualization platform - ETL pipeline and web dashboard"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "numpy",
    "ome-zarr>=0.9,<0.10",
    "imageio",
    "dask",
    "zarr>=2.16,<3",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "scikit-image",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "Pillow",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["code*"]
